force-app/main/default/objects/nFUSE__Transaction_Detail__c/nFUSE__Transaction_Detail__c.object-meta.xml
<CustomObject>
    <description>Details about an Integration Platform Transaction Log</description>
    <label>Transaction Detail</label>
    <nameField>
        <label>Transaction Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>