force-app/main/default/objects/nFUSE__Transaction_Detail__c/fields/nFUSE__Comments__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Comments__c</fullName>
    <description>Comments about the Transaction&apos;s state</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>