force-app/main/default/objects/nFUSE__Transaction_Detail__c/fields/nFUSE__Log_Type__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Log_Type__c</fullName>
    <description>An optional field used to create categories of logs specific to product implementation.</description>
    <label>Log Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>