force-app/main/default/objects/nFUSE__Transaction_Detail__c/fields/nFUSE__Transaction_Log__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Transaction_Log__c</fullName>
    <description>The required master Transaction Log identifier that this detail is associated.</description>
    <inlineHelpText>The required master Transaction Log identifier that this detail is associated.</inlineHelpText>
    <label>Transaction Log</label>
    <referenceTo>nFUSE__Transaction_Log__c</referenceTo>
    <relationshipLabel>Transaction Details</relationshipLabel>
    <relationshipName>Transaction_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>