force-app/main/default/objects/nFUSE__Transaction_Detail__c/fields/nFUSE__Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Transaction_Status__c</fullName>
    <description>The required in transit status of the Transaction.</description>
    <inlineHelpText>The required in transit status of the Transaction.</inlineHelpText>
    <label>Transaction Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>