force-app/main/default/objects/nFUSE__Transaction_Detail__c/fields/nFUSE__Vendor_Status__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Vendor_Status__c</fullName>
    <description>The status of the Transaction from the provider vendor&apos;s perspective.</description>
    <inlineHelpText>The status of the Transaction from the provider vendor&apos;s perspective.</inlineHelpText>
    <label>Vendor Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>